Fix overlapping about section

--- a/src/css/landing-page.css
+++ b/src/css/landing-page.css
@@ -87,12 +87,8 @@ html, body {
      {
          background-color: inherit;
      }
-     .about
-     {
-         clear: both;
-         height: 150vh;
-     }
  }
+
 
 body{
     background-color: rgb(22, 22, 22) !important;
@@ -169,6 +165,7 @@ body{
     font-size: 1.5em !important;
     text-align: center;
     color: #ffffff !important;
+    margin-bottom: 50vh;
 }
 
 /* ketentuan */
